feat: add swagger annotations for warp domain
